--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<%= yield %>
+<div id="container">
+
+  <div id="header">
+  </div>
+
+  <div id="content">
+	<%= yield %>
+  </div>
+
+  <div id="footer">
+  </div>
+
+</div>
 
 </body>
 </html>
