--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <div id="container">
 
   <div id="header">
+	Luvs
   </div>
 
   <div id="content">
@@ -18,6 +19,7 @@
   </div>
 
   <div id="footer">
+	Copyright (C) 2010 Rafael Fernández López
   </div>
 
 </div>
