--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,6 @@
+<h1>All projects:</h1>
 <% @projects.each do |project| %>
-<p>
-  <%= link_to project.name, project %>
-</p>
+<ul>
+  <li><%= link_to project.name, project %></li>
+</ul>
 <% end %>
