--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -1,12 +1,22 @@
-html, body {
+html {
+	height: 100%;
+}
+
+body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	font-family: "Ubuntu", "DejaVu Sans", arial, sans-serif;
+	background: #3d3d3d;
+	color: #fff;
 }
 
 h1 {
 	text-align: center;
+}
+
+a:link, a:visited, a:hover, a:active {
+	color: #fff;
 }
 
 div#container {
@@ -18,15 +28,51 @@ div#container {
 }
 
 div#header {
+	display: block;
 	padding: 1em;
+	font-size: 200%;
+	font-weight: bold;
+	text-shadow: 1px 1px 0 #000;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-border-bottom-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-moz-border-radius-bottomright: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	background: #222;
 }
 
 div#content {
-	padding: 1em 1em 5em;
+	display: block;
+	padding: 1em;
+	margin-bottom: 10cm;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	background: #222244;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	height: 100%;
 }
 
 div#footer {
-	position: absolute;
-	width: 100%;
-	bottom: 0;
+	display: block;
+	padding: 1em;
+	margin-top: 10em;
+	text-shadow: 1px 1px 0 #000;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	background: #222;
+	text-align: center;
+	font-size: small;
 }
