--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -19,7 +19,15 @@ a:link, a:visited, a:hover, a:active {
 	color: #fff;
 }
 
-div#container {
+#subtitle {
+	font-size: 50%;
+	font-style: italic;
+	text-align: left;
+        margin-top: -0.5em;
+	margin-left: 2em;
+}
+
+#container {
 	position: relative;
 	margin: 0 auto;
 	height: auto !important;
@@ -27,7 +35,7 @@ div#container {
 	width: 750px;
 }
 
-div#header {
+#header {
 	display: block;
 	padding: 1em;
 	font-size: 200%;
@@ -45,7 +53,7 @@ div#header {
 	background: #222;
 }
 
-div#content {
+#content {
 	display: block;
 	padding: 1em;
 	margin-bottom: 10cm;
@@ -58,13 +66,12 @@ div#content {
 	background: #222244;
 	margin-top: 1em;
 	margin-bottom: 1em;
-	height: 100%;
+	min-height: 300px;
 }
 
-div#footer {
+#footer {
 	display: block;
 	padding: 1em;
-	margin-top: 10em;
 	text-shadow: 1px 1px 0 #000;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
