--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -23,7 +23,7 @@ a:link, a:visited, a:hover, a:active {
 	font-size: 50%;
 	font-style: italic;
 	text-align: left;
-        margin-top: -0.5em;
+    margin-top: -0.5em;
 	margin-left: 2em;
 }
 
@@ -71,15 +71,21 @@ a:link, a:visited, a:hover, a:active {
 
 #footer {
 	display: block;
+	position: absolute;
+	bottom: 0;
 	padding: 1em;
 	text-shadow: 1px 1px 0 #000;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 	background: #222;
 	text-align: center;
 	font-size: small;
+	width: 725px;
 }
