--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All projects:</h1>
+<h1>All projects</h1>
 <% @projects.each do |project| %>
 <ul>
   <li><%= link_to project.name, project %></li>
