Luvs title links to root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div id="container">
 
   <div id="header">
-	Luvs
+	<%= link_to "Luvs", root_url %>
 	<div id="subtitle">
 	  Luving since 2011
 	</div>
