Add icons to the flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,10 @@
   </div>
 
   <% if notice %>
-	<p class="notice"><%= notice %></p>
+	<div class="notice"><ul><li><%= notice %></li></ul></div>
   <% end %>
   <% if alert %>
-	<p class="alert"><%= alert %></p>
+	<div class="alert"><ul><li><%= alert %></li></ul></div>
   <% end %>
 
   <div id="content">
