--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -143,6 +143,55 @@ a:link, a:visited, a:hover, a:active {
 	width: 710px;
 }
 
+#project {
+	display: block;
+	height: 100px;
+	background: #524b0c url(/images/alert-overlay.png) repeat-x;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	padding: 10px;
+	vertical-align: middle;
+	margin-top: 30px;
+}
+
+#projectluvs {
+	position: absolute;
+	right: 45px;
+	display: inline-block;
+	background: #aa0024 url(/images/alert-overlay.png) repeat-x;
+	height: 70px;
+	width: 70px;
+	text-shadow: 1px 1px 0 #000;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 350%;
+	margin-top: 15px;
+}
+
+#projectname {
+	position: absolute;
+	left: 50px;
+	font-variant: small-caps;
+	font-size: 300%;
+}
+
+#projectwebsite {
+	position: absolute;
+	left: 80px;
+	font-size: 150%;
+	margin-top: 60px;
+}
+
 img {
 	border: 0;
 }
