--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -156,6 +156,7 @@ a:link, a:visited, a:hover, a:active {
 	padding: 10px;
 	vertical-align: middle;
 	margin-top: 30px;
+	margin-bottom: 25px;
 }
 
 #projectluvs {
