--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -14,6 +14,8 @@ body {
 h2 {
 	text-align: center;
 	font-variant: small-caps;
+	font-size: 320%;
+	margin-top: 5px;
 }
 
 .notice {
@@ -88,7 +90,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #header {
-	font-size: 300%;
+	font-size: 350%;
 	font-weight: bold;
 	text-shadow: 1px 1px 0 #000;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -112,14 +114,14 @@ a:link, a:visited, a:hover, a:active {
 
 #content {
 	display: block;
-	background: #222244 url(/images/alert-overlay.png) repeat-x;
+	background-color: #222244;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	padding: 5px;
+	padding: 2px;
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-top: 10px;
