--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -167,11 +167,12 @@ a:link, a:visited, a:hover, a:active {
 
 #projectluvs {
 	position: absolute;
+	font-weight: bold;
 	right: 45px;
 	display: inline-block;
 	background: #aa0024 url(/images/alert-overlay.png) repeat-x;
 	height: 70px;
-	width: 70px;
+	min-width: 70px;
 	text-shadow: 1px 1px 0 #000;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -197,6 +198,34 @@ a:link, a:visited, a:hover, a:active {
 	left: 80px;
 	font-size: 150%;
 	margin-top: 60px;
+}
+
+#luvs {
+	position: absolute;
+	font-weight: bold;
+	right: 20px;
+	display: inline-block;
+	background: #aa0024 url(/images/alert-overlay.png) repeat-x;
+	height: 125px;
+	min-width: 120px;
+	text-shadow: 1px 1px 0 #000;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 350%;
+	margin-top: 15px;
+	top: 270px;
+}
+
+#luvstext {
+	position: absolute;
+	top: 60px;
+	font-size: 40%;
 }
 
 img {
