--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,14 @@
   <%= @project.luvs.count %>
   <div id="luvstext">people luv'd it !</div>
 </div>
-<div class="awesome magenta" style="position: absolute; left: 20px; top: 295px; height: 115px; width: 530px;">
-  <div id="centericon"><img src="/images/heart.png" width="64"></div>
-  <div id="breaktext" style="font-size: 200%; font-weight: bold;">Luv it !</div>
-</div>
+<% if user_signed_in? %>
+  <div class="awesome magenta" style="position: absolute; left: 20px; top: 295px; height: 115px; width: 530px;">
+    <div id="centericon"><img src="/images/heart.png" width="64"></div>
+    <div id="breaktext" style="font-size: 200%; font-weight: bold;">Luv it !</div>
+  </div>
+<% else %>
+  <div class="awesome disabled" style="position: absolute; left: 20px; top: 295px; height: 115px; width: 530px;">
+    <div id="centericon"><img src="/images/heart.png" width="64"></div>
+    <div id="breaktext" style="font-size: 200%; font-weight: bold;">Login to luv !</div>
+  </div>
+<% end %>
