--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,9 +1,10 @@
 <h2><%= @project.name %></h2>
-<div id="luvs">
-  <%= @project.luvs.count %>
-  <div id="luvstext">people luv'd it !</div>
-</div>
-<% if user_signed_in? %>
+<% if @controller.luvin? %>
+  <div class="awesome disabled big">
+    <div id="centericon"><img src="/images/heart.png" width="64"></div>
+    <div id="breaktext" style="font-size: 200%; font-weight: bold;">Already luvin' it !</div>
+  </div>
+<% elsif user_signed_in? %>
   <%= link_to url_for(:controller => "projects", :action => "luv"), :class => "awesome magenta big" do %>
     <div id="centericon"><img src="/images/heart.png" width="64"></div>
     <div id="breaktext" style="font-size: 200%; font-weight: bold;">Luv it !</div>
@@ -14,3 +15,7 @@
     <div id="breaktext" style="font-size: 200%; font-weight: bold;">Login to luv !</div>
   </div>
 <% end %>
+<div id="luvs">
+  <div id="luvscount"><%= @project.luvs.count %></div>
+  <div id="luvstext">people luv'd it !</div>
+</div>
