--- a/public/stylesheets/buttons.css
+++ b/public/stylesheets/buttons.css
@@ -3,11 +3,11 @@
     position: relative;
     background: #222222 url(/images/alert-overlay.png) repeat-x; 
     margin: 0;
-	margin-left: 5px;
+    margin-left: 5px;
     border: 0;
-	padding: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     color: #ffffff;
     text-decoration: none;
     box-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -30,11 +30,8 @@
 }
 
 .awesome.magenta.big {
-	position: absolute;
-	left: 20px;
-	top: 295px;
 	height: 115px;
-	width: 530px;
+	width: 500px;
 }
 
 .awesome.disabled, .awesome.disabled:visited {
@@ -46,12 +43,14 @@
 	opacity: 0.5;
 }
 
+.awesome.disabled:active {
+  opacity: 0.5;
+  top: 0;
+}
+
 .awesome.disabled.big {
-	position: absolute;
-	left: 20px;
-	top: 295px;
 	height: 115px;
-	width: 530px;
+	width: 500px;
 }
 
 #icon {
@@ -62,9 +61,8 @@
 
 #centericon {
 	display: block;
-	vertical-align: middle;
-	margin-right: 2px;
 	text-align: center;
+  margin-top: 5px;
 }
 
 #text {
