--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -203,13 +203,10 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #luvs {
-	position: absolute;
+  position: absolute;
 	font-weight: bold;
-	right: 20px;
-	display: inline-block;
 	background: #aa0024 url(/images/alert-overlay.png) repeat-x;
-	height: 125px;
-	min-width: 120px;
+  width: 120px;
 	text-shadow: 1px 1px 0 #000;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -218,16 +215,24 @@ a:link, a:visited, a:hover, a:active {
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	text-align: center;
-	vertical-align: middle;
-	font-size: 350%;
-	margin-top: 15px;
-	top: 280px;
+  padding: 5px;
+  margin-top: -125px;
+  margin-left: 550px;
+/*   margin-left: 550px; */
+}
+
+#luvscount {
+  display: block;
+  font-size: 350%;
+  text-align: top;
+  margin-top: -10px;
 }
 
 #luvstext {
-	position: absolute;
-	top: 60px;
-	font-size: 40%;
+  display: block;
+  font-size: 150%;
+  text-align: bottom;
+  margin-top: -10px;
 }
 
 img {
