--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,7 +5,7 @@
     <div id="breaktext" style="font-size: 200%; font-weight: bold;">Login to luv !</div>
   </div>
 <% elsif luvin? @project %>
-  <%= link_to url_for(:controller => "projects", :action => "unluv"), :class => "awesome magenta big" do %>
+  <%= link_to url_for(:controller => "projects", :action => "unluv"), :class => "awesome magenta big", :confirm => "#{@project.name} is not happy about this. Really ?" do %>
     <div id="centericon"><img src="/images/broken_heart.png" width="64"></div>
     <div id="breaktext" style="font-size: 200%; font-weight: bold;">This is not luv anymore !</div>
   <% end %>
